[package]
name = "cryptography-key-parsing"
version = "0.1.0"
authors = ["The cryptography developers <cryptography-dev@python.org>"]
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.65.0"

[dependencies]
asn1 = { version = "0.21.0", default-features = false }
cfg-if = "1"
openssl = "0.10.70"
openssl-sys = "0.9.106"
cryptography-x509 = { path = "../cryptography-x509" }
